# VorbisCpp

./: .gitmodules  CMakeLists.txt
benchmarks/: CMakeLists.txt
src/: OggStream.cpp  OggStream.h  VorbisCppConfig.in.h  util.cpp  util.h
test/: CMakeLists.txt  testCRC.cpp  testOggStream.cpp
